  Ctrl+Y again, the previous line would also be killed. Now, the last line
  will only be cleared and the cursor will remain there. So that you cannot
  accidentally delete text above the line where you started to press Ctrl+Y.
  If you do not like the new behaviour, add "Switch Carthy Off" to the confi-
  guration file in order to revert to the old behaviour.


Features:

- Msged now creates a TZUTC kludge line by default. Use
  "switch TZUTC off to" disable this if you do not like it or wrong 
  information is put to the kludge. Msged does not yet evaluate TZUTC
  kludge lines when reading mail.

- Character set translation maps for CP865, courtesy of Jesper Soerensen

- New switch "DomainMsgid". Turned on by default, but if turned off it will
  disable printing of the 5D domain string in MSGID lines. You must turn
  this off if you are using Soupgate for proper reply linking.

- Added Fidoconfig parsing code that can work without the fidoconfig
  library. This keeps the binaries small and insensitive against library 
  interface changes and new keyword introductions.

- Group handling has been added. Msged can now read group information from
  tosser configuration files, sort areas by group, draw separators in the
  arealist between the groups, or only show areas of a single group at a time
  in the arealist. Please read the section "Grouping" in the "Advanced
  Concepts" chapter of the Msged manual for more information.

- The Unix version now comes with the "testcons" utility. It is intended
  mainly for debugging purposes. You will be instructed how to use it when
  you report a bug concerning Msged not recognising some sort of keystroke.

- You can now globally enable input of high ASCII codes for Unix by
  specifying "EnableSC" without parameters in the configuration file. This is
  useful if you need to enter cyrillics and the like (previously, you had to
  list each and ever character that you wanted to enable as parameter, which